Update BallMouseDemo.java